@startuml GamePlainText

' styling options
!include %dirpath()/../styles/class.iuml

' diagram imports
!include %dirpath()/GameCommunication.puml

' class diagram (https://plantuml.com/class-diagram)
package plaintext {
    package protocol {
        class PlainTextProtocolFactory {
            + createActionSerializer(): Serializer<Action>
            + createActionResultConverter(): Converter<ActionResult>
            + createCellStatusConverter(): Converter<CellStatus>
            + createLogCellStatusSerializer(): Serializer<CellStatus>
        }
        communication.protocol.ProtocolFactory <|.. PlainTextProtocolFactory
    }

    package convert {
        package action {
            package result {
                class OkayActionResultConverter {
                    + serialize(actionResult: ActionResult): String
                    + parse(data: String): OkayActionResult
                }
                communication.convert.Converter <|.. OkayActionResultConverter : <<bind>> <T -> ActionResult>

                class NotOkayActionResultConverter {
                    + serialize(actionResult: ActionResult): String
                    + parse(data: String): NotOkayActionResult
                }
                communication.convert.Converter <|.. NotOkayActionResultConverter : <<bind>> <T -> ActionResult>

                class DirectionActionResultConverter {
                    + serialize(actionResult: ActionResult): String
                    + parse(data: String): DirectionActionResult
                }
                OkayActionResultConverter <|-- DirectionActionResultConverter

                class PositionActionResultConverter {
                    + serialize(actionResult: ActionResult): String
                    + parse(data: String): PositionActionResult
                }
                OkayActionResultConverter <|-- PositionActionResultConverter

                class FormActionResultConverter {
                    + serialize(actionResult: ActionResult): String
                    + parse(data: String): FormActionResult
                }
                OkayActionResultConverter <|-- FormActionResultConverter

                class SheetActionResultConverter {
                    + serialize(actionResult: ActionResult): String
                    + parse(data: String): SheetActionResult
                }
                OkayActionResultConverter <|-- SheetActionResultConverter

                class BlockedActionResultConverter {
                    + serialize(actionResult: ActionResult): String
                    + parse(data: String): BlockedActionResult
                }
                NotOkayActionResultConverter <|-- BlockedActionResultConverter

                class WrongOrderActionResultConverter {
                    + serialize(actionResult: ActionResult): String
                    + parse(data: String): WrongOrderActionResult
                }
                NotOkayActionResultConverter <|-- WrongOrderActionResultConverter

                class NotYoursActionResultConverter {
                    + serialize(actionResult: ActionResult): String
                    + parse(data: String): NotYoursActionResult
                }
                NotOkayActionResultConverter <|-- NotYoursActionResultConverter

                class EmptyActionResultConverter {
                    + serialize(actionResult: ActionResult): String
                    + parse(data: String): EmptyActionResult
                }
                NotOkayActionResultConverter <|-- EmptyActionResultConverter

                class TalkingActionResultConverter {
                    + serialize(actionResult: ActionResult): String
                    + parse(data: String): TalkingActionResult
                }
                NotOkayActionResultConverter <|-- TalkingActionResultConverter

                class TakingActionResultConverter {
                    + serialize(actionResult: ActionResult): String
                    + parse(data: String): TakingActionResult
                }
                NotOkayActionResultConverter <|-- TakingActionResultConverter

                class NotSupportedActionResultConverter {
                    + serialize(actionResult: ActionResult): String
                    + parse(data: String): NotSupportedActionResult
                }
                NotOkayActionResultConverter <|-- NotSupportedActionResultConverter
            }

            class GoActionSerializer {
                + serialize(action: Action): String
            }
            communication.convert.Serializer <|.. GoActionSerializer : <<bind>> <T -> Action>

            class KickActionSerializer {
                + serialize(action: Action): String
            }
            communication.convert.Serializer <|.. KickActionSerializer : <<bind>> <T -> Action>

            class PositionActionSerializer {
                + serialize(action: Action): String
            }
            communication.convert.Serializer <|.. PositionActionSerializer : <<bind>> <T -> Action>

            class TakeActionSerializer {
                + serialize(action: Action): String
            }
            communication.convert.Serializer <|.. TakeActionSerializer : <<bind>> <T -> Action>

            class PutActionSerializer {
                + serialize(action: Action): String
            }
            communication.convert.Serializer <|.. PutActionSerializer : <<bind>> <T -> Action>

            class FinishActionSerializer {
                + serialize(action: Action): String
            }
            communication.convert.Serializer <|.. FinishActionSerializer : <<bind>> <T -> Action>
        }

        package status {
            package log {
                class LogWallCellStatusSerializer {
                    + serialize(cellStatus: CellStatus): String
                }
                communication.convert.Serializer <|.. LogWallCellStatusSerializer : <<bind>> <T -> CellStatus>

                class LogFloorCellStatusSerializer {
                    + serialize(cellStatus: CellStatus): String
                }
                communication.convert.Serializer <|.. LogFloorCellStatusSerializer : <<bind>> <T -> CellStatus>

                class LogFormCellStatusSerializer {
                    + serialize(cellStatus: CellStatus): String
                }
                communication.convert.Serializer <|.. LogFormCellStatusSerializer : <<bind>> <T -> CellStatus>

                class LogFinishCellStatusSerializer {
                    + serialize(cellStatus: CellStatus): String
                }
                communication.convert.Serializer <|.. LogFinishCellStatusSerializer : <<bind>> <T -> CellStatus>

                class LogUnknownCellStatusSerializer {
                    + serialize(cellStatus: CellStatus): String
                }
                communication.convert.Serializer <|.. LogUnknownCellStatusSerializer : <<bind>> <T -> CellStatus>
            }

            abstract class VisitableCellStatusConverter <<abstract>> {
                + serialize(cellStatus: CellStatus): String
                ~ parse<T: VisitableCellStatus>(parts: String[], enemyIndex: int,
                visitableCellStatusProvider: VisitableCellStatusProvider<T>): T
            }
            communication.convert.Converter <|.. VisitableCellStatusConverter : <<bind>> <T -> CellStatus>

            interface VisitableCellStatusProvider<T: VisitableCellStatus> <<interface>> {
                + create(enemyDistance: int): T
            }

            class WallCellStatusConverter {
                + serialize(cellStatus: CellStatus): String
                + parse(data: String): WallCellStatus
            }
            communication.convert.Converter <|.. WallCellStatusConverter : <<bind>> <T -> CellStatus>

            class FloorCellStatusConverter {
                + serialize(cellStatus: CellStatus): String
                + parse(data: String): FloorCellStatus
            }
            VisitableCellStatusConverter <|-- FloorCellStatusConverter

            class FormCellStatusConverter {
                + serialize(cellStatus: CellStatus): String
                + parse(data: String): FormCellStatus
            }
            VisitableCellStatusConverter <|-- FormCellStatusConverter

            class FinishCellStatusConverter {
                + serialize(cellStatus: CellStatus): String
                + parse(data: String): FinishCellStatus
            }
            VisitableCellStatusConverter <|-- FinishCellStatusConverter
        }
    }
}

@enduml
